Replace token_symbol with token_id (OMGShop)
Summary: After the SDK, it's time to update the OMGShop API.

Test Plan: Tests + Rubocop

Reviewers: mederic, euro, sirn, unnawut

Reviewed By: mederic, unnawut

Subscribers: jenkins

Maniphest Tasks: T304

Differential Revision: https://phabricator.omisego.io/D200
